# Research_Paper_to_Video

./: .env.example  .env.production.example  API_ONLY_VIDEO_GENERATION_SUMMARY.md  CLEANUP_COMPLETION_REPORT.md  Dockerfile  FALLBACK_METHODS_EXPLANATION.md  Makefile  PROJECT_STATUS.md  README.md  SETUP.md  VIDEO_PRODUCTION_SUMMARY.md  agents_consolidation_plan.json  api_spec.json  docker-compose.prod.yml  docker-compose.yml  main.py  package-lock.json  pyproject.toml  requirements.txt  start.py
agents/: __init__.py  audio.py  base.py  ingest.py  logging.py  metadata.py  rendering.py  retry.py  script.py  understanding.py  video_composition.py  visual_planning.py  youtube.py
animation/: __init__.py  templates.py
audio/: __init__.py  tts_service.py
backend/: __init__.py  config.py  main.py
backend/models/: __init__.py  animation.py  audio.py  paper.py  script.py  understanding.py  video.py  visual.py
backend/services/: __init__.py  llm.py
config/: production_config_2024.json
config/backend/: config.py  main.py
docker/: Dockerfile.backend  Dockerfile.frontend  nginx.conf
frontend/: package.json
graph/: __init__.py  master_workflow.py  workflow.py
infra/: __init__.py
scripts/: ai_content_enhancer.py  ai_model_config_ui.py  ai_model_manager.py  ai_model_presets.py  ai_model_profiler.py  ai_prompt_manager.py  analytics_system.py  animation_selector.py  asset_relationship_mapper.py  asset_storage_manager.py  backup_sync_manager.py  blender_3d_generator.py  chapter_generator.py  chart_generator.py  collaboration_system.py  content_management_system.py  content_reporter.py  content_validator.py  content_version_manager.py  database_manager.py  database_schema.py  demo_unified_pipeline.py  download_and_check_video.py  error_handler.py  export_integration_system.py  ffmpeg_installer.py  file_organization_manager.py  fix_dns.sh  fix_network_persist.sh  manim_generator.py  motion_canvas_generator.py  multimodal_content_processor.py  music_generation_manager.py  performance_monitor.py  quality_presets.py  setup_production.py  setup_production_2024.py  show_raso_status.py  smart_folder_manager.py  tts_model_manager.py  (+6 more)
tests/: __init__.py  conftest.py  test_agent_communication_properties.py  test_animation_safety_properties.py  test_audio_sync_properties.py  test_config_properties.py  test_framework_assignment_properties.py  test_ingestion_error_properties.py  test_paper_ingestion_properties.py  test_rendering_reliability_properties.py  test_retry_properties.py  test_script_properties.py  test_state_properties.py  test_understanding_properties.py  test_video_composition_properties.py
utils/: collaboration_system.py  export_integration_system.py
video/: __init__.py  composition.py
(+475 files in other folders)
